Settings pages: Account Management + Profile Settings overflow issues
Rearranged some span's and font resizing

--- a/app/styles/lang/_es.scss
+++ b/app/styles/lang/_es.scss
@@ -128,4 +128,24 @@ body.lang_es {
 
     }
   }
+
+
+  #ProfileSettingsPage {
+    @media (max-width: 1090px) {
+
+      .well-title {
+        font-size: 16px;
+
+        .well-sub-title, a {
+          font-size: 13px;
+          margin-top: 2px;
+        }
+        button {
+          font-size: 14px;
+          margin-top: 6px;
+        }
+      }
+
+    }
+  }
 }
